[gd_scene load_steps=4 format=3 uid="uid://bgjuxed5fpl5s"]

[ext_resource type="Script" path="res://src/Data/card_base.gd" id="1_08kof"]
[ext_resource type="FontFile" uid="uid://ckc6setr8wt67" path="res://src/Data/Font/static/Dosis-ExtraBold.ttf" id="2_lq3cc"]
[ext_resource type="Texture2D" uid="uid://c6y54lionoodb" path="res://src/Data/Images/CardBack.png" id="3_frk1b"]

[node name="CardBase" type="MarginContainer"]
editor_description = "250 x 350 works fine
"
custom_minimum_size = Vector2(75, 105)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -262.5
offset_right = 187.5
offset_bottom = 262.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(187.5, 262.5)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_08kof")

[node name="CardBackgroundColor" type="ColorRect" parent="."]
layout_mode = 2

[node name="Card_Sprite2D" type="Sprite2D" parent="."]
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopGap" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BactName" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.823529, 0.14902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_lq3cc")
theme_override_font_sizes/font_size = 50
text = "E. coli"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MidGap" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3

[node name="Description" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.823529, 0.14902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_lq3cc")
theme_override_font_sizes/font_size = 28
text = "Escheria coli
G+, ..."
autowrap_mode = 2

[node name="BottomGap" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 3

[node name="CardBack" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("3_frk1b")

[node name="FlipButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[connection signal="mouse_entered" from="FlipButton" to="." method="_on_flip_button_mouse_entered"]
[connection signal="mouse_exited" from="FlipButton" to="." method="_on_flip_button_mouse_exited"]
[connection signal="pressed" from="FlipButton" to="." method="_on_flip_button_pressed"]
